# orisha

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE.md.template  CONTRIBUTING.md  DESIGN_HANDLERS.md  LICENSE  README.md  ROADMAP.md  koru.json  koru.zon  nginx_benchmark.conf  package.json
.koru-studio/: fragments.json
.koru-studio/sessions/: session-1772919025955-bm0mgtdgy.json  session-1772919192769-fztwv1w11.json  session-1772928435898-nxpgvpsqa.json  session-1772997069035-529hkhlco.json
benchmarks/: README.md  run.sh
benchmarks/dynamic/rust-actix/: Cargo.toml
benchmarks/dynamic/rust-actix/src/: main.rs
benchmarks/micro/: README.md  parse_request.zig  response_build.zig  router_dispatch.zig
benchmarks/results/: comparison_20260202.csv  dynamic_20260115_210115.csv  dynamic_20260208_162942.csv  dynamic_20260312_223932.csv  dynamic_20260312_225834.csv  dynamic_json_20260208_170634.csv  dynamic_json_ct_20260208_180454.csv  dynamic_json_ct_logorder_20260208_192541.csv  dynamic_json_ct_logorder_retry_20260208_195229.csv  dynamic_manual_20260208_155624.csv  dynamic_quick.csv  static_20260115_203713.csv  static_20260115_204744.csv
benchmarks/static/: nginx.conf
benchmarks/wire/: post_add.lua
examples/: Dockerfile.tiny  orisha_baseline  orisha_server  orisha_tiny  orisha_tiny_new  simple_server.kz
examples/.koru-docker/: Dockerfile.0
examples/full-server/: main.kz
examples/hello/: README.md  backend_tmp  (+3 more)
lib/: index.kz  routing.kz
ogun/: README.md
public/: index.html
shango/: README.md
src/: eshu.kz  index.kz  router.kz
tests/: router_test.kz
(+30 files in other folders)
